Changelog:

V1.16 December X, 2016

	* Disables print cancellation dialog if corresponding setting is enabled in OctoPrint >= V1.3.1

V1.15 December 11, 2016

	* Installers work with OctoPrint >= V1.3.0
	* Fixed compatibility with OctoPrint >= V1.3.0
	* Fixed backlash calibration instructions

V1.14 December 5, 2016

	* Fixed macOS installer

V1.13 December 3, 2016

	* Fixed Safari related JavaScript issue

V1.12 December 3, 2016

	* Made model editor's raft display more efficient
	* Added more tolerance to raft's size in model editor when using Cura to make the boundary checking more accurate
	* Added vendor prefixes to CSS 3.0 properties to improve compatibility with outdated browsers
	* Fixed macOS installer when Xcode is installed
	* Fixed compatibility with OctoPrint >= V1.3.0rc2

V1.11 November 6, 2016

	* Heatbed will start heating up after moving extruder into the wipe corner
	* Text can be translated into different languages
	* Allows manually entering external bed height when performing a complete bed calibration if the user doesn't want to or can't remove their external bed
	* JavaScript is now compatible with jQuery >= 3.0 just in case OctoPrint ever upgrades to it
	* Model editor camera will focus on the currently selected model

V1.10 October 25, 2016

	* Incorporates model viewer into OctoPrint
	* All controls go back to their default behaviour when not using a Micro 3D printer
	* Positioning a model now works with printer profiles that have a circular form factor or a center origin
	* Model editor displays cylindrical printing area when printer profile has a circular form factor
	* Added grid display to model editor that matches up with the same positioning as the G-code viewer and model viewer grids
	* Fixed performing standby command when finishing or canceling a print with OctoPrint 1.3.x
	* Changed readme to show how M33 Fio isn't just for people using a Micro 3D printer

V1.9 October 20, 2016

	* Provides iMe V00.00.01.23 printer firmware