@@ -14,7 +14,7 @@ plugin_package = "octoprint_m33fio"
 plugin_name = "OctoPrint-M33Fio"
 
 # The plugin's version. Can be overwritten within OctoPrint's internal data via __plugin_version__ in the plugin module
-plugin_version = "1.15.2016121917"
+plugin_version = "1.15.2016121922"
 
 # The plugin's description. Can be overwritten within OctoPrint's internal data via __plugin_description__ in the plugin
 # module
